--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Fcode
-spring.datasource.username=sa
-spring.datasource.password=sa
+spring.datasource.url=jdbc:mysql://35.240.179.89/Fcode
+spring.datasource.username=hungpt
+spring.datasource.password=Hungbi1998
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.open-in-view=false
