--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,9 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>mssql-jdbc</artifactId>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.13</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
