--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://us-cdbr-iron-east-01.cleardb.net/heroku_bb23ba27a5e8ac6
-spring.datasource.username=bce8c72d636d17
-spring.datasource.password=d74d0605
+spring.datasource.url=jdbc:sqlserver://fcode-fu.database.windows.net:1433;databaseName=Fcode
+spring.datasource.username=hungpt
+spring.datasource.password=Hungbi1998
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.open-in-view=false
